CoreModules/MissionService/missionapi-k8s/missionapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: missionapi
  namespace: onaimhub
  labels:
    app: missionapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: missionapi
  template:
    metadata:
      labels:
        app: missionapi
    spec:
      containers:
        - name: missionapi
          image: gvgroup/onaimhub-missionservice:latest  # Replace with your DockerHub image path
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"              
          volumeMounts:
            - mountPath: /app/appsettings.json
              name: missionapi-cm0
              subPath: appsettings.json
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: appsettings.json
                path: appsettings.json
            name: missionapi-cm0
          name: missionapi-cm0
