CoreModules/MissionService/missionapi-k8s/missiondb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: missiondb
  namespace: onaimhub
spec:
  ports:
    - name: "5437"
      port: 5437
      targetPort: 5432
  selector:
    app: missiondb
  type: ClusterIP
